# musicboy-redux

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  launcher.py  pyproject.toml
bot/: bot.py  player.py  youtube.py
bot/cogs/: music_player.py
bot/util/: cache.py  const.py  embed.py  helpers.py
src/: cache.rs  main.rs  player.rs  utils.rs  youtube.rs
src/commands/: mod.rs
