[package]
name = "musicboy-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dashmap = "5.5"
dotenvy = "0.15"
poise = "0.6"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "json"] }
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", features = ["voice", "cache", "gateway"] }
songbird = { version = "0.4", features = ["builtin-queue"] } 
# The critical fix: We must depend on symphonia directly to enable codecs
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
